# budgent

./: .gitignore  README.md  SECURITY.md
agent/: agent.ts  package.json
backend/: .env.example  nest-cli.json  package-lock.json  package.json  run-e2e.mjs  setup-mainnet.mjs  sweep-recipients.mjs  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/api/: admin.controller.ts  agent.controller.ts  public.controller.ts
backend/src/apikeys/: apikeys.service.ts
backend/src/common/: admin.guard.ts  apikey.guard.ts  assets.ts  units.ts
backend/src/indexer/: indexer.service.ts
backend/src/ledger/: ledger.service.ts
backend/src/payments/: payments.service.ts
backend/src/policy/: policy.service.ts
backend/src/redis/: redis.service.ts
backend/src/resources/: resources.service.ts
backend/src/solana/: keystore.service.ts  solana.module.ts  solana.service.ts
backend/src/vaults/: vaults.service.ts
cli/: .gitignore  README.md  budgent.mjs  package-lock.json  package.json
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/renderer/: index.html  renderer.js  style.css
onchain/: Anchor.toml
onchain/programs/budgent_vault/: Cargo.toml
onchain/programs/budgent_vault/src/: lib.rs
scripts/: build-verifiable.sh  deploy.sh  verify-onchain.sh
sdk/integrations/: README.md
sdk/mcp/: README.md  package.json  server.mjs
sdk/python/: budgent.py
sdk/ts/: package-lock.json  package.json  tsconfig.json
wallet-tui/: .env.example  README.md  package-lock.json  package.json  wallet.mjs
(+9 files in other folders)
