[package]
name = "budgent_vault"
version = "0.1.0"
description = "Budgent Policy Vault — on-chain budget enforcement for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "budgent_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
